Separate logic for treating keywords for photos and videos, since Exiftool is not consistent there.